# mkinitramfs

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  mkinitramfs.bzl
.circleci/: config.yml
cmd/mkinitramfs/: BUILD.bazel  main.go
